<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<!--
   Copyright 2020 eve autonomy inc. All Rights Reserved.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->

<package format="3">
  <name>proj_launch</name>
  <version>1.0.0</version>
  <description>proj_launch package</description>

  <maintainer email="yuma.nihei@eveautonomy.com">Yuma Nihei</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <exec_depend>audio_driver</exec_depend>
  <exec_depend>dio_ros_driver</exec_depend>
  <exec_depend>button_manager</exec_depend>
  <exec_depend>v2i_interface</exec_depend>
  <exec_depend>warning_lamp_manager</exec_depend>
  <exec_depend>ad_status_lamp_manager</exec_depend>
  <exec_depend>ad_sound_manager</exec_depend>
  <exec_depend>delivery_reservation_lamp_manager</exec_depend>
  <exec_depend>go_interface</exec_depend>
  <exec_depend>engage_srv_converter</exec_depend>
  <exec_depend>autoware_state_machine</exec_depend>
  <exec_depend>shutdown_manager</exec_depend>
  <exec_depend>button_output_selector</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
